--- a/features/steps/test_starter/prompts.yml
+++ b/features/steps/test_starter/prompts.yml
@@ -2,7 +2,7 @@ project_name:
   title: "Project Name"
   text: |
     Please enter a human readable name for your new project.
-    Spaces, hyphens, and underscores are allowed.
+    Spaces, hyphens and underscores are allowed.
   regex_validator: "^[\\w -]{2,}$"
   error_message: |
     It must contain only alphanumeric symbols, spaces, underscores and hyphens and
